# carsim

./: CMakeLists.txt  README.md  todo.txt
include/: bicycle.h  glanimator.h
param/: bicycle.yaml  simulator.yaml
src/: bicycle.cpp  glanimator.cpp  main.cpp
